# solana-ctf

./: README.md
memory-safety-vulns/memory-safety-vulns/: Anchor.toml  README.md
memory-safety-vulns/memory-safety-vulns/programs/memory-safety-vulns/: Cargo.toml
memory-safety-vulns/memory-safety-vulns/programs/memory-safety-vulns/src/: lib.rs
memory-safety-vulns/memory-safety-vulns/tests/: memory-safety-vulns.ts
missing-signer-check/: Anchor.toml  README.md  package-lock.json
missing-signer-check/programs/pda/: Cargo.toml
missing-signer-check/programs/pda/src/: lib.rs
missing-signer-check/tests/: signer-check-demo.ts
solana-program-close/: .gitignore  Anchor.toml  README.md  package-lock.json  package.json
solana-program-close/programs/solana-program-close/: Cargo.toml
solana-program-close/programs/solana-program-close/src/: lib.rs
solana-program-close/tests/: solana-program-close.ts
test-ledger/: faucet-keypair.json  genesis.tar.bz2  snapshot-100-HhWgF1j95mEQ4zP9wCDXH6vG5J7sTPEaF3JygTeFX8w1.tar.zst  stake-account-keypair.json  validator-keypair.json  vote-account-keypair.json
test-ledger/accounts/run/: 0.3
test-ledger/accounts/snapshot/100/: 100.0  59.1
test-ledger/rocksdb/: 000014.sst  000015.sst  000016.sst  000017.sst  000018.sst  000019.sst  IDENTITY  LOG  LOG.old.1748685190747894  MANIFEST-000021
test-ledger/snapshot/100/: 100  status_cache
